<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" 
                          schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>m5stack_example</name>
  <version>1.0.0</version>
  <description>M5Stack examples with ros2arduino.</description>
  <maintainer email="nomumu-github@koso2-dan.ddo.jp">nomumu</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>m5stack_msgs</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>m5stack_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
